# bpy-widget

./: README.md  pyproject.toml  test_extensions_api.py  test_extensions_api2.py  test_widget.py
.github/: copilot-instructions.md
.github/instructions/: frontend.instructions.md  python-backend.instructions.md  testing.instructions.md
.github/workflows/: test.yml
examples/: basic_usage.py  basic_usage_backup.py  data_import.py  simple_widget.py
examples/sample_data/: points.parquet
frontend/src/: widget.js
frontend/src/controls/: camera-controls.js
frontend/src/rendering/: canvas-renderer.js
sample_data/: points.parquet
src/bpy_widget/: __init__.py  utils.py  widget.py
src/bpy_widget/core/: __init__.py  camera.py  compositor_manager.py  extension_manager.py  geometry.py  io_handlers.py  lighting.py  materials.py  post_processing.py  rendering.py  scene.py  setup_datafiles.py
src/bpy_widget/static/: widget.css  widget.js
tests/: conftest.py  test_rendering.py  test_rendering_performance.py  test_scene.py
