[project]
name = "bpy-widget"
version = "0.1.0"
description = "Interactive Blender 3D viewport widget for notebooks with real-time Eevee Next rendering."
readme = "README.md"
authors = [
    { name = "Björn Bethge", email = "bjoern.bethge@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.18",
    "traitlets>=5.14.3",
    "polars>=1.19.0",
    "numpy>=1.26.0",
    "bpy>=4.5.4",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo",
    "nbformat",
    "pytest",
    "mypy",
    "ruff",
]

[tool.uv]
link-mode = "copy"

[tool.marimo.runtime]
pythonpath = ["src"]
output_max_bytes = 10_000_000
